--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>akashgavali0179@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>akashgavali0179@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -183,9 +183,9 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">SQL <i class="val">100%</i></span>
+              <span class="skill">SQL <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -249,7 +249,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Akash Gavali</h4>
-              <p><em>Innovative and deadline-driven Data analyst with 5+ years of experience designing and analysis marketing treads.</em></p>
+              <p><em>Innovative and deadline-driven Data analyst with years of experience designing and analysis marketing treads.</em></p>
               <ul>
                 <li>Pune, Maharashtra</li>
                 <li>+91 9579766641</li>
