--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p> Hello! I'm Akash Gavali, a dedicated data analyst passionate about uncovering meaningful insights from complex datasets. With a proven track record in Data Science, I thrive on turning raw information into actionable strategies. My journey in the data realm is driven by a curiosity to understand the stories numbers tell.</p>
+          <p> Hello! Akash Gavali here, a dedicated data analyst passionate about uncovering meaningful insights from complex datasets. With a proven track record in Data Science, thriving on turning raw information into actionable strategies. The journey in the data realm is driven by a curiosity to understand the stories numbers tell.</p>
         </div>
 
         <div class="row">
@@ -90,15 +90,15 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Data Analyst & Web Developer.</h3>
             <p class="fst-italic">
-              My commitment to excellence in data analysis extends to staying abreast of the latest tools and methodologies in the ever-evolving field of data science.
+             Commitment to excellence in data analysis extends to staying abreast of the latest tools and methodologies in the ever-evolving field of data science.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>sep 17,1999</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://www.linkedin.com/in/akash-gavali-9a97a423b/</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>17 sep,1999</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href = "https://www.linkedin.com/in/akash-gavali-9a97a423b/"><span>https://www.linkedin.com/in/akash-gavali-9a97a423b/</span></a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>9579766641</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Vaijapur, Aurangabad, Maharashtra, India</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Pune, Maharashtra, India</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -111,8 +111,7 @@
               </div>
             </div>
             <p>
-              I am a data analyst with proficiency in Python programming, SQL, Tableau, Excel and Power BI. He holds a Google Data Analytics Certificate and focuses on deriving actionable insights from data to drive informed decisions. Additionally
-              I am web developer and freelancer who creating website for a clint and I have goal to satisfy costomer requirement.
+              A data analyst proficient in Python programming, SQL, Tableau, Excel, and Power BI, holding a Google Data Analytics Certificate and focusing on deriving actionable insights from data to drive informed decisions. Additionally, a web developer and freelancer creating websites for clients with the goal of satisfying customer requirements.
             </p>
           </div>
         </div>
@@ -126,8 +125,7 @@
 
         <div class="section-title">
           <h2>Fact</h2>
-          <p>Happy clients are my fuel; each project is a canvas where I paint insights. With countless hours of support, I'm the relentless architect of success, blending passion with hard work to sculpt data into transformative solutions
-          </p>
+          <p>Happy clients are the fuel; each project is a canvas where insights are painted. With countless hours of support, the relentless architect of success blends passion with hard work to sculpt data into transformative solutions.</p>
         </div>
 
         <div class="row no-gutters">
@@ -175,7 +173,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>I am a proficient Data Analyst, holds a Google Data Analytics Certificate, demonstrating expertise in R programming, SQL, and Tableau. With practical experience in real-world projects, he excels in deriving actionable insights and driving informed decisions.</p>
+          <p>A skilled Data Analyst holding a Google Data Analytics Certificate, demonstrating expertise in R programming, SQL, and Tableau. With practical experience in real-world projects, excelling in deriving actionable insights and driving informed decisions.</p>
         </div>
 
         <div class="row skills-content">
@@ -261,7 +259,7 @@
             <div class="resume-item">
               <h4>Master of Science &amp; Information Technology</h4>
               <h5>2021 - 2023</h5>
-              <p><em>Vivekanand Institute of Technology, Aurangabad/em></p>
+              <p><em>Vivekanand Institute of Technology, Aurangabad</em></p>
               <p>•	Relevant Courses: Data Analytics, Machine Learning, Database Management</p>
             </div>
             <div class="resume-item">
@@ -329,7 +327,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="sales data"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=" python sales data"><i class="bx bx-plus"></i></a>
                 <a href="https://github.com/akashgavali0179/python-sales" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
