--- a/index.html
+++ b/index.html
@@ -608,6 +608,7 @@
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
+		<b><i>"Error: {"next":"/thanks?language=en","ok":true}"</i> "= your mail successfully submited"</b>
             </form>
           </div>
 
