--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>17 sep,1999</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href = "https://www.linkedin.com/in/akash-gavali-9a97a423b/"><span>https://www.linkedin.com/in/akash-gavali-9a97a423b/</span></a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>9579766641</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Pune, Maharashtra, India</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Vaijapur, Maharashtra, India</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
