--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://github.com/akashgavali0179" class="github"><i class="bx bxl-github"></i></a>
-          <a href="www.linkedin.com/in/akash-gavali-a3a6ba31a" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/akash-gavali-a3a6ba31a/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
